--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
+    />
+
     <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Interactive rating component</title>
@@ -29,22 +34,36 @@
   </head>
   <body>
     <!-- Rating state start -->
+
     <div class="card-rating">
-      <h1>How did we do?</h1>
+      <button class="favourite">
+        <span class="material-symbols-outlined"> star </span>
+      </button>
+      <div class="text-container">
+        <h1>How did we do?</h1>
 
-      <p>
-        Please let us know how we did with your support request. All feedback is
-        appreciated to help us improve our offering!
-      </p>
-
-      1 2 3 4 5
-
-      <button>Submit</button>
+        <p class="rating-request">
+          Please let us know how we did with your support request. All feedback
+          is appreciated to help us improve our offering!
+        </p>
+      </div>
+      <div class="btn-container">
+        <button id="btn1" class="btn-rating" onclick="submitRating();">
+          1
+        </button>
+        <button id="btn2" class="btn-rating">2</button>
+        <button id="btn3" class="btn-rating">3</button>
+        <button id="btn4" class="btn-rating">4</button>
+        <button id="btn5" class="btn-rating">5</button>
+      </div>
+      <div class="sub-container">
+        <button class="submit">SUBMIT</button>
+      </div>
     </div>
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
-    <div class="card-thanks">
+    <div id="thanks" class="card-thanks">
       <p>You selected</p>
       <!-- Add rating here -->
       <p class="rating">out of 5</p>
@@ -61,8 +80,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Cintia Siqueira</a>.
       </div>
     </footer>
+
+    <script src="code.js"></script>
   </body>
 </html>
