did a for to wrap all the buttons

--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         </p>
       </div>
       <div class="btn-container">
-        <button id="btn1" class="btn-rating" onclick="submitRating();">
-          1
-        </button>
-        <button id="btn2" class="btn-rating">2</button>
-        <button id="btn3" class="btn-rating">3</button>
-        <button id="btn4" class="btn-rating">4</button>
-        <button id="btn5" class="btn-rating">5</button>
+        <button id="btn1" class="btn-rating" value="1">1</button>
+        <button id="btn2" class="btn-rating" value="2">2</button>
+        <button id="btn3" class="btn-rating" value="3">3</button>
+        <button id="btn4" class="btn-rating" value="4">4</button>
+        <button id="btn5" class="btn-rating" value="5">5</button>
       </div>
       <div class="sub-container">
         <button class="submit">SUBMIT</button>
       </div>
     </div>
+
+    <p id="alert" class="alert"></p>
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
