change the value of user to display in the card

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
           src="/images/illustration-thank-you.svg"
         />
         <div class="select-container">
-          <p class="rating">You selected</p>
-          <span class="value-user"></span>
-          <p class="rating">out of 5</p>
+          <p class="rating">You selected&nbsp</p>
+          <span id="user-value" class="value-user"></span>
+          <p class="rating">&nbspout of 5</p>
         </div>
         <div class="texting-container">
           <h4 class="title-thanks">Thank you!</h4>
